syntax = "proto3";
package pb;
option go_package = "github.com/Calmantara/go-common/proto;pb";

message ErrorMessage {
  string error = 1;
  string error_type = 2;
}